# StyleMimic

./: README.md  convert.py  demo_bot.ipynb  json_filter.py  json_refactor.py  rdy_for_copy.py  requirements.txt  result.json download guide.txt  руководство.txt
StyleMimic_components/: Context3.ipynb  Parser_tg.py  README.md  pyproject.toml  руководство.txt
StyleMimic_components/bot/: bot.py  settings.py
StyleMimic_components/bot/algorithm/: highlighting_a_style.py
StyleMimic_components/bot/keyboards/: inline.py  state_buttons.py
StyleMimic_components/bot/ollama/: api.py
StyleMimic_components/bot/routers/: completion.py  start.py
StyleMimic_components/bot/system_prompt/: test_words.py
StyleMimic_conponents/: Parser_tg.py  bot_512_8bit.py  Копия блокнота _demo_bot.ipynb_
bot/: settings.py
bot/algorithm/: function_json.py
bot/json/: load_json.py
bot/keyboards/: reply.py
bot/ollama/: api.py  dto.py
bot/routers/: completion.py
bot/system_prompt/: prompt.py
