[tool.poetry]
name = "StyleMimic"
version = "0.1.0"
description = "Telegram bot that interacts with the local Ollama and mimics the communication style"
authors = ["pp_3sem_urfu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.16.0"
aiofiles = "^24.1.0"
aiohappyeyeballs = "^2.4.4"
aiohttp = "^3.11.11"
aiosignal = "^1.3.2"
annotated-types = "^0.7.0"
anyio = "^4.8.0"
async-timeout = "^5.0.1"
attrs = "^24.3.0"
backports-tarfile = "^1.2.0"
build = "^1.2.2"
CacheControl = "^0.14.2"
certifi = "^2024.12.14"
charset-normalizer = "^3.4.1"
cleo = "^2.1.0"
click = "^8.1.8"
colorama = "^0.4.6"
crashtest = "^0.4.1"
distlib = "^0.3.9"
dulwich = "^0.22.7"
emoji = "^2.14.0"
exceptiongroup = "^1.2.2"
fastjsonschema = "^2.21.1"
filelock = "^3.16.1"
frozenlist = "^1.5.0"
h11 = "^0.14.0"
httpcore = "^1.0.7"
httpx = "^0.28.1"
idna = "^3.10"
importlib-metadata = "^8.5.0"
installer = "^0.7.0"
jaraco-classes = "^3.4.0"
jaraco-context = "^6.0.1"
jaraco-functools = "^4.1.0"
joblib = "^1.4.2"
keyring = "^25.6.0"
magic-filter = "^1.0.12"
more-itertools = "^10.5.0"
msgpack = "^1.1.0"
multidict = "^6.1.0"
nest-asyncio = "^1.6.0"
nltk = "^3.9.1"
numpy = "^2.0.2"
packaging = "^24.2"
pkginfo = "^1.12.0"
platformdirs = "^4.3.6"
poetry = "^2.0.1"
poetry-core = "^2.0.1"
propcache = "^0.2.1"
pydantic = "^2.10.4"
pydantic-core = "^2.27.2"
pyproject-hooks = "^1.2.0"
python-telegram-bot = "^21.10"
pywin32-ctypes = "^0.2.3"
RapidFuzz = "^3.11.0"
regex = "^2024.11.6"
requests = "^2.32.3"
requests-toolbelt = "^1.0.0"
ruff = "^0.8.4"
scikit-learn = "^1.6.1"
scipy = "^1.13.1"
shellingham = "^1.5.4"
sniffio = "^1.3.1"
threadpoolctl = "^3.5.0"
tomli = "^2.2.1"
tomlkit = "^0.13.2"
tqdm = "^4.67.1"
trove-classifiers = "^2025.1.10.15"
typing-extensions = "^4.12.2"
urllib3 = "^2.3.0"
virtualenv = "^20.28.1"
yarl = "^1.18.3"
zipp = "^3.21.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"